Add footer with CEO info and social links
Added footer section with contact information and links.

--- a/index.html
+++ b/index.html
@@ -2622,5 +2622,35 @@ VALIDATION STATUS:
 
         renderRoles();
     </script>
+     <!-- Footer -->
+    <footer class="site-footer">
+        <div class="footer-container">
+            <div class="footer-content">
+                <div class="footer-info">
+                    <h3 class="footer-title">Bhavani Kola</h3>
+                    <p class="footer-subtitle">CEO & Founder | EclaTech Solutions</p>
+                    <p class="footer-description">AI Education Leader & Adaptive AI Consultant</p>
+                </div>
+                <div class="footer-links">
+                    <a href="https://www.linkedin.com/in/bhavanikola/" target="_blank" class="social-link">
+                        <i class="fab fa-linkedin"></i>
+                        LinkedIn
+                    </a>
+                    <a href="https://www.youtube.com/@BhavaniKola" target="_blank" class="social-link">
+                        <i class="fab fa-youtube"></i>
+                        YouTube
+                    </a>
+                    <a href="https://bhavanikola2023.github.io/eclatechbrochure/#home" target="_blank" class="social-link">
+                        <i class="fas fa-microphone"></i>
+                        Speaking
+                    </a>
+                </div>
+            </div>
+            <div class="footer-copyright">
+                © 2025 ECLATECH SOLUTIONS LLC. All rights reserved.
+                Disclaimer: This workshop and resource guide are provided for informational and educational purposes only; the presenter makes no warranties regarding the accuracy, completeness, or suitability of AI-generated content for specific use cases, and participants are solely responsible for verifying all information, ensuring compliance with applicable laws and organizational policies, protecting confidential information, and exercising independent professional judgment in their use of AI tools.
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
