--- a/index.html
+++ b/index.html
@@ -289,17 +289,17 @@
 
         .badge-complexity {
             background: #fff4e6;
-            color: #e67e22;
+            color: #592b03;
         }
 
         .badge-reasoning {
             background: #e8f4f8;
-            color: #3498db;
+            color: #031c2d;
         }
 
         .badge-platform {
             background: #f0e6ff;
-            color: #9b59b6;
+            color: #310643;
         }
 
         .prompt-text {
@@ -323,7 +323,8 @@
         .copy-btn {
             flex: 1;
             padding: 10px;
-            background: #667eea;
+            background: #4e577f
+        ;
             color: white;
             border: none;
             border-radius: 6px;
